[tool.poetry]
name = "neubind"
version = "0.1.0"
description = ""
authors = ["BesfortBunjaku <bessffort@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.5.3"
mkdocstrings = "^0.23.0"
mkdocstrings-python = "^1.7.3"
mkdocs-mermaid2-plugin = "^1.1.1"
mkdocs-material = "^9.4.7"
pygments = "^2.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
